@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Added union types.
+
+
 0.17     2016-06-01
 
 - Change "use v5.10" to "use 5.010". The former appears to cause warnings on
